--- a/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
+++ b/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
@@ -1214,7 +1214,10 @@ t
 y = - 3 g几＋户(Q产Oz — Dzv 。X)'
 或者，代入飞行时间t=2v 。之／g 有
 y=~~ （上。立— Vo立） g 3
-习题3 试确定地球转动对单摆微振动的影响（傅科摆问题）．
+
+
+
+**习题 3** 试确定地球转动对单摆微振动的影响（傅科摆问题）．
 解：忽略摆的竖直方向位移这个二阶小量，可以认为运动在水平的xy 平面
 内．略去包含矿的项，写出运动方程为
 x+ 忒x = 2Qz§, §＋忒y ＝ - 2Qzi,
